--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 OWNER_NAME="Teddy"
+SESSION_ID= ""
 PREFIX="."
-PUBLIC_MODE='non'
-AUTO_READ_STATUS="non"
-AUTO_DOWNLOAD_STATUS="oui"
-BOT_NAME= "ALITA-XMD"
+PUBLIC_MODE='no'
+AUTO_READ_STATUS="on"
+AUTO_DOWNLOAD_STATUS="yes"
+BOT_NAME= "TEDDY-XMD"
 IMAGE_MENU= "254799963583"
 NUMERO_OWNER= "254799963583"
 OWNER_NAME= "᚛Teddy᚜"
