--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "name":"ARYAN-TECH",
-  "description":"Best whatsapp bot💥 developed by Teddy Tech ᴍᴜʟᴛɪᴘʟᴇ ᴅᴇᴠɪᴄᴇ ʙᴏᴛ ",
+  "description":"Best whatsapp bot💥 developed by ARYAN-TECH ᴍᴜʟᴛɪᴘʟᴇ ᴅᴇᴠɪᴄᴇ ʙᴏᴛ ",
   "keywords":["ARYAN","node","baileys","whatsapp"],
-  "logo":"https://files.catbox.moe/p02qjd.jpg",
+  "logo":"https://files.catbox.moe/bse21s.jpg",
     "repository": "https://github.com/Aryan-tech/ARYAN-TECH",
   "succes_url": "/",
   "stack": "container",
