--- a/.env
+++ b/.env
@@ -1,13 +1,13 @@
-OWNER_NAME="Teddy"
-SESSION_ID= ""
+OWNER_NAME="aryan"
+SESSION_ID= "aryan"
 PREFIX="."
 PUBLIC_MODE='no'
 AUTO_READ_STATUS="on"
 AUTO_DOWNLOAD_STATUS="yes"
-BOT_NAME= "TEDDY-XMD"
-IMAGE_MENU= "254799963583"
-NUMERO_OWNER= "254799963583"
-OWNER_NAME= "᚛Teddy᚜"
+BOT_NAME= "ARYAN-XMD"
+IMAGE_MENU= "255637518095"
+NUMERO_OWNER= "255637518095"
+OWNER_NAME= "᚛ARYAN᚜"
 DATABASE_URL= ""
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
