--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ PAIRING_NUMBER=
 # Leave empty to use JSON file storage
 
 # MongoDB
-MONGO_URL=
+MONGO_URL=mongodb+srv://kibetwycliffe093_db_user:d4m5nPYEWChQK2U1@cluster0.qzur4la.mongodb.net/?appName=Cluster0
 
 # PostgreSQL
 POSTGRES_URL=
